opravy + pridana moznost zamku + moznost vynechat kotel

--- a/HeatApp/Views/Home/Index.cshtml
+++ b/HeatApp/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
+
+@{
     ViewData["Title"] = "Kotelna";
 }
 <section class="content-header">
@@ -10,10 +13,12 @@
 
 <section class="content">
     <div class="row">
+        @if (Configuration.GetSection("BoilerUnit").GetValue<bool>("UseBoiler"))
+        {
         <div class="col-lg-3 col-xs-6">
-            <div class="small-box @(ViewBag.Boiler == "termostat" ? "bg-gray": ViewBag.Boiler == "on" ? "bg-green" : "bg-aqua" ) ">
+            <div class="small-box @(ViewBag.Boiler == "termostat" ? "bg-gray" : ViewBag.Boiler == "on" ? "bg-green" : "bg-aqua" ) ">
                 <div class="inner">
-                    <h3><i class="fa @(ViewBag.Boiler == "termostat" ? "fa-remove": ViewBag.Boiler == "on" ? "fa-fire" : "fa-snowflake-o" )"></i></h3>
+                    <h3><i class="fa @(ViewBag.Boiler == "termostat" ? "fa-remove" : ViewBag.Boiler == "on" ? "fa-fire" : "fa-snowflake-o" )"></i></h3>
 
                     <p>Kotel</p>
                 </div>
@@ -23,6 +28,7 @@
                 <a href="/Boiler" class="small-box-footer">Více <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
+        }
         <div class="col-lg-3 col-xs-6">
             <div class="small-box @(@ViewBag.Requests == 0 ? "bg-green" : (ViewBag.Requests == ViewBag.Requestable ? "bg-red" : "bg-yellow"))">
                 <div class="inner">
