--- a/HeatApp/Views/Valves/Edit.cshtml
+++ b/HeatApp/Views/Valves/Edit.cshtml
@@ -1,4 +1,7 @@
-﻿@model HeatApp.Models.ValveView
+﻿@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
+
+@model HeatApp.Models.ValveView
 
 @{
     ViewData["Title"] = "Detail ventilu";
@@ -22,7 +25,7 @@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <label class="control-label">Adresa</label>
-                                    <input asp-for="Addr" readonly=@(Model.Addr > 0 ? "readonly" : "") class="form-control" />
+                                    <input asp-for="Addr" readonly=@(Model.Addr > 0) class="form-control" />
                                     <span asp-validation-for="Addr" class="text-danger"></span>
                                 </div>
                             </div>
@@ -33,6 +36,14 @@
                                     <span asp-validation-for="Caption" class="text-danger"></span>
                                 </div>
                             </div>
+                            <div class="col-md-3">
+                                <label class="control-label">Časový rozvrh</label>
+                                <div class="form-group">
+                                    <select asp-for="TimeTable" class="form-control" asp-items="ViewBag.TimeTables"></select>
+                                    <span asp-validation-for="TimeTable" class="text-danger"></span>
+                                </div>
+                            </div>
+
                         </div>
                         <div class="row">
                             <div class="col-md-3">
@@ -49,15 +60,15 @@
                                 </div>
                             </div>
                             <div class="col-md-3">
-                                <label class="control-label">Řízení kotle</label>
+                                <label class="control-label">Uzamknout</label>
                                 <div class="funkyradio">
-                                    <div class="funkyradio-default">
-                                        <input type="radio" id="radio3" value="false" asp-for="BoilerEnabled" />
-                                        <label for="radio3">Pouze regulace </label>
+                                    <div class="funkyradio-warning">
+                                        <input type="radio" id="radio3" value="true" asp-for="Locked" />
+                                        <label for="radio3">Uzamčeno</label>
                                     </div>
                                     <div class="funkyradio-success">
-                                        <input type="radio" id="radio4" value="true" asp-for="BoilerEnabled" />
-                                        <label for="radio4">Spouštět kotel</label>
+                                        <input type="radio" id="radio4" value="false" asp-for="Locked" />
+                                        <label for="radio4">Odemčeno</label>
                                     </div>
                                 </div>
                             </div>
@@ -73,18 +84,43 @@
                                     </span>
                                 </div>
                             </div>
-                            <div class="col-md-3">
-                                <label class="control-label">Časový rozvrh</label>
-                                <div class="form-group">
-                                    <select asp-for="TimeTable" class="form-control" asp-items="ViewBag.TimeTables"></select>
-                                    <span asp-validation-for="TimeTable" class="text-danger"></span>
+                            @if (Configuration.GetSection("BoilerUnit").GetValue<bool>("UseBoiler"))
+                            {
+                                <div class="col-md-3">
+                                    <label class="control-label">Řízení kotle</label>
+                                    <div class="funkyradio">
+                                        <div class="funkyradio-default">
+                                            <input type="radio" id="radio4" value="false" asp-for="BoilerEnabled" />
+                                            <label for="radio4">Pouze regulace </label>
+                                        </div>
+                                        <div class="funkyradio-success">
+                                            <input type="radio" id="radio5" value="true" asp-for="BoilerEnabled" />
+                                            <label for="radio5">Spouštět kotel</label>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
+                            }
                         </div>
                     </div>
                     <div class="box-footer clearfix">
                         <input type="submit" value="Uložit" class="btn btn-sm btn-warning btn-flat pull-left" />
                     </div>
+                </div>
+
+                @if (Model.Addr > 0)
+                {
+                    <div class="box box-info">
+                        <div class="box-header with-border">
+                            <h3 class="box-title">Graf vývoje teploty</h3>
+                        </div>
+                        <div class="box-body">
+                            <div id="chartCont">
+                            </div>
+                        </div>
+                    </div>
+                }
+                <div class="">
+                    <a class="btn btn-sm btn-info btn-flat pull-left" asp-action="Index">Zpět na seznam</a>
                 </div>
             </div>
             @if (Model.Addr > 0)
@@ -94,11 +130,24 @@
                         <div class="box-header with-border">
                             <h3 class="box-title">Nastavení ventilu</h3>
                         </div>
-                        <div class="box-body">
+                        <div class="box-body settingsArea">
+                            <div class="table-responsive">
+                                <table class="table table-condensed no-margin">
+                                    <thead>
+                                        <tr>
+                                            <th>Název</th>
+                                            <th>Popis</th>
+                                            <th>Hodnota</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                         <div class="box-footer clearfix">
                             <a href="#" class="btn btn-sm btn-info btn-flat pull-left get-settings">Načíst</a>
-                            <input type="submit" value="Uložit" class="btn btn-sm btn-warning btn-flat pull-left" />
+                            @*<input type="submit" value="Uložit" class="btn btn-sm btn-warning btn-flat pull-left" />*@
                         </div>
                     </div>
                 </div>
@@ -106,25 +155,8 @@
         </div>
     </form>
 
-    @if (Model.Addr > 0)
-    {
-        <div class="row">
-            <div class="col-md-7">
-                <div class="box box-info">
-                    <div class="box-header with-border">
-                        <h3 class="box-title">Graf vývoje teploty</h3>
-                    </div>
-                    <div class="box-body">
-                        <div id="chartCont">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    }
-    <div class="row">
-        <a class="btn btn-sm btn-info btn-flat pull-left" asp-action="Index">Zpět na seznam</a>
-    </div>
+
+
 </section>
 
 
@@ -145,79 +177,93 @@
                 url: '/Valves/LoadSettings/@Model.Addr'
             });
         });
-        //$(document).ready(function () {
-            $.ajax({
-                url: '/Valves/GetSettings/@Model.Addr'
-            }).done(function (data) {
-                //console.log(data);
+
+        var valveAddr = @Model.Addr;
+
+        if (valveAddr > 0) {
+            $('.get-settings').on('click', function (e) {
+                $.ajax({
+                    url: '/Valves/LoadSettings/@Model.Addr'
+                });
             });
-            $.ajax({
-                url: '/Valves/GetValveLog/@Model.Addr'
-            }).done(function (data) {
-                var res = {};
-                res['turn'] = combine(data.time, data.turn);
-                res['measured'] = combine(data.time, data.measured);
-                res['wanted'] = combine(data.time, data.wanted);
-                Highcharts.setOptions({
-                    global: {
-                        timezoneOffset: -60
+        }
+
+        $.ajax({
+            url: '/Valves/GetSettings/@Model.Addr'
+        }).done(function (data) {
+            var table = '';
+            for (var i in data) {
+                table += '<tr><td>' + data[i].name + '</td><td>' + data[i].description + '</td><td>' + data[i].value + '</td></tr>';
+            }
+            $('.settingsArea table tbody').empty().append(table);
+
+        });
+        $.ajax({
+            url: '/Valves/GetValveLog/@Model.Addr'
+        }).done(function (data) {
+            var res = {};
+            res['turn'] = combine(data.time, data.turn);
+            res['measured'] = combine(data.time, data.measured);
+            res['wanted'] = combine(data.time, data.wanted);
+            Highcharts.setOptions({
+                global: {
+                    timezoneOffset: -60
+                }
+            });
+
+            Highcharts.chart('chartCont', {
+                chart: {
+                    type: 'spline',
+                    alignTicks: false
+                },
+                tooltip: {
+                    formatter: function () {
+                        return '<b>' + this.series.name + '</b> ' + this.y + '<br/>' +
+                            Highcharts.dateFormat('%e.%m. %H:%M', new Date(this.x));
                     }
-                });
-
-                Highcharts.chart('chartCont', {
-                    chart: {
-                        type: 'spline',
-                        alignTicks: false
-                    },
-                    tooltip: {
-                        formatter: function () {
-                            return '<b>' + this.series.name + '</b> ' + this.y + '<br/>' +
-                                Highcharts.dateFormat('%e.%m. %H:%M', new Date(this.x));
-                        }
-                    },
-                    data:data,
+                },
+                data:data,
+                title: {
+                    text: 'Průběh teploty'
+                },
+                xAxis: {
+                    type: 'datetime',
                     title: {
-                        text: 'Průběh teploty'
+                        text: 'Čas'
+                    }
+                },
+                yAxis: [{
+                    title: {
+                        text: 'Teplota °C',
+                    }
+                }, {
+                    title: {
+                        text: 'Otevření ventilu %',
                     },
-                    xAxis: {
-                        type: 'datetime',
-                        title: {
-                            text: 'Čas'
-                        }
-                    },
-                    yAxis: [{
-                        title: {
-                            text: 'Teplota °C',
-                        }
-                    }, {
-                        title: {
-                            text: 'Otevření ventilu %',
-                        },
-                        opposite: true,
-                        max: 80,
-                        min: 20
-                    }],
-                    plotOptions: {
-                        spline: {
+                    opposite: true,
+                    max: 80,
+                    min: 20
+                }],
+                plotOptions: {
+                    spline: {
 
-                        }
-                    },
-                    series: [{
-                        name: 'Naměřená teplota',
-                        data: res.measured
-                    },
-                    {
-                        name: 'Požadovaná teplota',
-                        data: res.wanted
-                    },
-                    {
-                        name: 'Otevření ventilu',
-                        data: res.turn,
-                        yAxis: 1
-                    }]
-                });
+                    }
+                },
+                series: [{
+                    name: 'Naměřená teplota',
+                    data: res.measured
+                },
+                {
+                    name: 'Požadovaná teplota',
+                    data: res.wanted
+                },
+                {
+                    name: 'Otevření ventilu',
+                    data: res.turn,
+                    yAxis: 1
+                }]
             });
-        //});
+        });
 
 
         $('.plusButton').on('click', function (e) {
